test_programs/compile_failure/noirc_frontend_tests_deny_abi_attribute_outside_of_contract/src/main.nr


        #[abi(foo)]
        global foo: Field = 1;
    